# cad-self-driving

./: .gitattributes  .gitignore  20240530-132323.npy  LICENSE  README.md  config.yaml  test.yaml
GNSS/: Basestation.pdsprj  readme.md
control/ESP32_units/FocControlGAZ/main/: BLDCMotor.cpp  BLDCMotor.h  CMakeLists.txt  Can.cpp  Can.h  Ethernet.cpp  Ethernet.h  Gearbox.cpp  Gearbox.h  P_bootstrap.h  P_brake.h  P_gearbox.h  P_index.h  P_js.h  P_system.h  SimpleFOC.h  StepperMotor.h  main.cpp  motors.cpp  motors.h  nvstorage.cpp  nvstorage.h  variables.cpp  variables.h  web_funcs.cpp  web_funcs.h  webserver.cpp
control/ESP32_units/FocControlGAZ/main/common/: foc_utils.cpp  foc_utils.h  time_utils.cpp
control/ESP32_units/FocControlGAZ/main/common/base_classes/: BLDCDriver.h  FOCMotor.cpp  FOCMotor.h  Sensor.cpp
control/ESP32_units/FocControlGAZ/main/current_sense/: GenericCurrentSense.h  InlineCurrentSense.h  LowsideCurrentSense.h
control/ESP32_units/FocControlGAZ/main/drivers/: BLDCDriver3PWM.cpp  hardware_api.h
control/ESP32_units/FocControlGAZ/main/drivers/hardware_specific/esp32/: esp32_driver_mcpwm.h  esp32_mcu.cpp
control/ESP32_units/FocControlGAZ/main/sensors/: GenericSensor.h  MagneticSensorSSC.cpp  MagneticSensorSSC.h
control/ESP32_units/GAZ-control-unit/main/: CMakeLists.txt  hardware.h  main.cpp
control/ESP32_units/GAZ-control-unit/main/ADC/: ADC.cpp  ADC.h
control/ESP32_units/GAZ-control-unit/main/BTS7960/: BTS7960.cpp  BTS7960.h
control/ESP32_units/GAZ-control-unit/main/Brake/: Brake.cpp  Brake.h
control/ESP32_units/GAZ-control-unit/main/BrushedMotor/: BrushedMotor.cpp  BrushedMotor.h
control/ESP32_units/GAZ-control-unit/main/Clutch/: Clutch.cpp  Clutch.h
control/ESP32_units/GAZ-control-unit/main/E-Stop/: Estop.cpp  Estop.h
control/ESP32_units/GAZ-control-unit/main/Engine/: Engine.cpp  Engine.h
control/ESP32_units/GAZ-control-unit/main/Ethernet/: Ethernet.cpp  Ethernet.h
control/ESP32_units/GAZ-control-unit/main/Gearbox/: Gearbox.cpp  Gearbox.h
control/ESP32_units/GAZ-control-unit/main/LCD/: LCD.cpp  LCD.h
control/ESP32_units/GAZ-control-unit/main/Motors/: Motors.cpp  Motors.h
control/ESP32_units/GAZ-control-unit/main/NVStorage/: NVStorage.cpp  NVStorage.h
control/ESP32_units/GAZ-control-unit/main/PCCommunication/: PCCommunication.cpp  PCCommunication.h
control/ESP32_units/GAZ-control-unit/main/PID/: lowpass_filter.h
control/ESP32_units/GAZ-control-unit/main/RPC/: RPCClient.cpp  RPCClient.h  RPCCommunication.cpp  RPCCommunication.h
control/ESP32_units/GAZ-control-unit/main/StateMachine/: StateMachine.cpp  StateMachine.h
control/ESP32_units/GAZ-control-unit/main/Throttle/: Throttle.cpp  Throttle.h
control/ESP32_units/GAZ-control-unit/main/UDP-Server/: udp_server.cpp  udp_server.h
control/ESP32_units/GAZ-control-unit/main/Webserver/: P_brake.h  P_clutch.h  P_index.h  P_js.h  P_system.h  Webserver.cpp  Webserver.h  web_funcs.cpp  web_funcs.h
control/ESP32_units/GAZ-control-unit/main/Wheel/: Wheel.cpp  Wheel.h
navigation/sdgazelle/: CMakeLists.txt  package.xml
navigation/sdgazelle/launch/: lidar_recognizer.launch  ltest.launch  os1_obst.launch  path_following.launch  simulation+lidar.launch  simulation.launch  simulation_m1.launch  test_gps.launch  xavier.launch
navigation/sdgazelle/src/: car.py  carstatecontrol.py  gps_only.py  gpsnode.py  gpsreader.py.old  lidar_image_detect.py  obstacle_detector.py  path_following.py  rpmreader.py  self-driving game.py  stereorecognizer.py  utils.py  webdisplaynode.py
navigation/sdgazelle/src/data/: gps_dummy_pos.csv  gpspath_real.csv  gpspath_sim.csv  gpsvals.csv  histcar.csv
navigation/sdgazelle/src/static/: gazelle.css  gazelle_map.js  local_tiles.htm
navigation/sdgazelle/src/static/img/: point.psd
simulation/pcl_maps/: CMakeLists.txt  package.xml  readme.md
simulation/pcl_maps/src/: pcl_map_node.cpp
simulation/web_platform/robot_benchmark/docker/simulation/robot_interfaces/: CMakeLists.txt
simulation/web_platform/robot_benchmark/docker/simulation/robot_interfaces/srv/: PoseService.srv
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/: package.xml  requirements.txt  setup.cfg
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/config/: nav2_mapping.yaml
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/launch/: robot_launch.py  robot_launch_docker.py  uaz_avion_sprayer_launch.py
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/protos/: BmwX5Mesh.proto
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/resource/: bmw.urdf  gazele.urdf
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/webots_ros2_suv/: field_follower.py  node_ego_controller.py  suv_driver.py  universal_AT_controller.py
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/webots_ros2_suv/lib/: behavioral_analysis.py  finite_state_machine.py  map_utils.py  reeds_shepp_path_planning.py  rrt_.py  rrt_star_reeds_shepp.py
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/webots_ros2_suv/states/: AbstractState.py
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/worlds/: .ulstu_field.wbproj  robocross_uaz_avion_sprayer.wbt  robocross_uaz_patriot.wbt  suv_world.wbt
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/worlds/protos/: Crossroad_4_sides.wbt  Robocross.wbt
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/worlds/protos/Cow/: Cow.proto
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/worlds/protos/GazelleNext/: GazelleNextMesh.proto  GazelleNextWheel.proto
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/worlds/protos/Human/: Human.proto
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/worlds/protos/Kamaz/: Kamaz.proto
simulation/web_platform/robot_benchmark/docker/simulation/webots_ros2_suv/worlds/ulstu_net/: sumo.edg.xml  sumo.net.xml
(+1105 files in other folders)
