idf_component_register(SRCS "Can.cpp" "Gearbox.cpp" "main.cpp" "Ethernet.cpp" "webserver.cpp" "variables.cpp" "BLDCMotor.cpp" "common/foc_utils.cpp" "common/lowpass_filter.cpp" "common/pid.cpp"
"common/time_utils.cpp" "common/base_classes/FOCMotor.cpp" "common/base_classes/CurrentSense.cpp" "drivers/hardware_specific/esp32/esp32_mcu.cpp" "drivers/BLDCDriver3PWM.cpp"
"sensors/MagneticSensorSSC.cpp" "common/base_classes/Sensor.cpp" "nvstorage.cpp" "web_funcs.cpp" "motors.cpp" "Can.cpp"
                    INCLUDE_DIRS ".")