idf_component_register(
    SRC_DIRS "." "ADC" "Brake" "BrushedMotor" "BTS7960" "Clutch" "Engine" "E-Stop" "Ethernet" "Gearbox" "LCD" "../libs" "../libs/FlySkyIBus" "../libs/u8g2/cppsrc" 
    "../libs/u8g2/csrc" "../libs/u8g2-hal/src" "Motors" "NVStorage" "PCCommunication" "PID" "../libs" "RPC" "StateMachine" "Throttle" "UDP-Server" "Webserver" "Wheel"
    INCLUDE_DIRS "." "ADC" "Brake" "BrushedMotor" "BTS7960" "Clutch" "Engine" "E-Stop" "Ethernet" "Gearbox" "LCD" "../libs" "../libs/FlySkyIBus" "../libs/u8g2/cppsrc" 
    "../libs/u8g2/csrc" "../libs/u8g2-hal/include" "Motors" "NVStorage" "PCCommunication" "PID" "../libs" "RPC" "StateMachine" "Throttle" "UDP-Server" "Webserver" "Wheel"
)
