<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_ros2_suv</name>
  <version>2023.0.1</version>
  <description>SUV ROS2 interface for Webots.</description>

  <maintainer email="support@cyberbotics.com">Cyberbotics</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">http://wiki.ros.org/webots_ros2</url>
  <url type="bugtracker">https://github.com/cyberbotics/webots_ros2/issues</url>
  <url type="repository">https://github.com/cyberbotics/webots_ros2</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>prometheus_client</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>



</package>
